[gd_scene load_steps=4 format=3 uid="uid://y4k1v0xog8lo"]

[ext_resource type="Script" path="res://scripts/Main.gd" id="1_main"]
[ext_resource type="Theme" path="res://assets/vocab_zoo_theme.tres" id="2_theme"]
[ext_resource type="Texture2D" uid="uid://bpc6q2aites4q" path="res://assets/pixelart_starfields (1)/pixelart_starfield_corona.png" id="3_starfield"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_theme")
script = ExtResource("1_main")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
texture = ExtResource("3_starfield")
stretch_mode = 6

[node name="MenuContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MenuContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 100

[node name="TitleLabel" type="Label" parent="MenuContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.224, 1.0, 0.078, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.3)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 56
text = "vocab console"
horizontal_alignment = 1

[node name="InstructionsLabel" type="RichTextLabel" parent="MenuContainer/VBoxContainer"]
custom_minimum_size = Vector2(500, 200)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/default_color = Color(0.973, 0.98, 0.988, 1)
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "[center][b]How to Play:[/b]
Use [b]left/right arrows[/b] to move
Press [b]spacebar[/b] to shoot the correct answer!


Ready to start? Let's go![/center]"
fit_content = true
scroll_active = false

[node name="StartButton" type="Button" parent="MenuContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 70)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 24
text = "Start"

[node name="GameContainer" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ModalLayer" type="CanvasLayer" parent="."]
layer = 10
